--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <!-- one  contentbox-->
        
         <div class="contentbox">
-          <div class="oneLabel label">What is Bookmark? <p class="degClarition"><</p></button></div>
+          <div class="oneLabel label">What is Bookmark? <p class="degClarition"><</p></div>
           <div class="content-one hiddn">
             <p>
               Based on the provided code snippet, "What is Bookmark?" appears to
@@ -248,10 +248,12 @@
       <div class="fotertop">
         <p>35,000+ ALREADY JOINED</p>
         <h2>Stay up-to-date with what we’re doing</h2>
-
-        <!-- <input type="email" id="em"/>  -->
-
+      <form action="">
+        
+        <input type="email"/> 
         <button>Contact Us</button>
+      </form>
+
       </div>
 
       <div class="foterbottom">
