--- a/index.html
+++ b/index.html
@@ -258,13 +258,16 @@
 
       <div class="foterbottom">
         <div class="box">
-          <a href="#"><img src="./assets/icon/logo.svg" alt="logo" /></a>
+          <div class="mini-box">
+            <a href="#"><img src="./assets/icon/logo.svg" alt="logo" /></a>
+            
+            <ul>
+              <li><a href="">FEATURES</a></li>
+              <li><a href="">PRICING</a></li>
+              <li><a href="">CONTACT</a></li>
+            </ul>
+          </div>
 
-          <ul>
-            <li><a href="">FEATURES</a></li>
-            <li><a href="">PRICING</a></li>
-            <li><a href="">CONTACT</a></li>
-          </ul>
 
           <div class="link">
             <a href="#">.<i class="fa-brands fa-twitter"></i></a>
